# pyfma

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  justfile  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
cpp/: pybind11.cpp
pyfma/: __about__.py  __init__.py
src/: CMakeLists.txt  pybind11.cpp
src/pyfma/: __about__.py  __init__.py  _main.py
test/: test_fma.py
tests/: test_det.py  test_fma.py
