[metadata]
name = pyfma
version = 0.1.5
url = https://github.com/nschloe/pyfma
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Fused multiply-add for Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy >= 1.20.0
python_requires = >=3.7

[options.packages.find]
where=src
